// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Sanitize detail should work 1`] = `
Object {
  "arrival": Object {
    "when": Object {
      "local": 2017-09-11T11:40:00.000Z,
      "utc": 2017-09-11T09:40:00.000Z,
    },
    "where": Object {
      "cityName": "Gdansk",
      "code": "GDN",
    },
  },
  "authToken": "b9cb406d-f797-434c-bc21-a0612b92f201",
  "departure": Object {
    "when": Object {
      "local": 2017-09-11T09:05:00.000Z,
      "utc": 2017-09-11T07:05:00.000Z,
    },
    "where": Object {
      "cityName": "Rzeszow",
      "code": "RZE",
    },
  },
  "id": 2968389,
  "legs": Array [
    Object {
      "airlineCode": "LO",
      "arrival": Object {
        "when": Object {
          "local": 2017-09-11T09:55:00.000Z,
          "utc": 2017-09-11T07:55:00.000Z,
        },
        "where": Object {
          "cityName": "Warsaw",
          "code": "WAW",
        },
      },
      "departure": Object {
        "when": Object {
          "local": 2017-09-11T09:05:00.000Z,
          "utc": 2017-09-11T07:05:00.000Z,
        },
        "where": Object {
          "cityName": "Rzeszow",
          "code": "RZE",
        },
      },
      "flightNo": 3806,
      "id": "SP1123103_1678073",
      "recheckRequired": false,
    },
    Object {
      "airlineCode": "LO",
      "arrival": Object {
        "when": Object {
          "local": 2017-09-11T11:40:00.000Z,
          "utc": 2017-09-11T09:40:00.000Z,
        },
        "where": Object {
          "cityName": "Gdansk",
          "code": "GDN",
        },
      },
      "departure": Object {
        "when": Object {
          "local": 2017-09-11T10:45:00.000Z,
          "utc": 2017-09-11T08:45:00.000Z,
        },
        "where": Object {
          "cityName": "Warsaw",
          "code": "WAW",
        },
      },
      "flightNo": 3835,
      "id": "SP1123103_1678074",
      "recheckRequired": false,
    },
  ],
  "price": Object {
    "amount": 1082,
    "currency": "CZK",
  },
}
`;

exports[`Sanitize list item should work 1`] = `
Object {
  "allowedBaggage": Object {
    "additionalBaggage": Array [],
    "cabin": Array [
      Object {
        "height": 20,
        "length": 55,
        "note": null,
        "weight": 8,
        "width": 44,
      },
      Object {
        "height": null,
        "length": null,
        "note": null,
        "weight": null,
        "width": null,
      },
    ],
    "checked": Array [
      Object {
        "height": 81,
        "length": 119,
        "note": null,
        "weight": 23,
        "width": 119,
      },
    ],
  },
  "arrival": Object {
    "when": Object {
      "local": 2017-09-11T11:40:00.000Z,
      "utc": 2017-09-11T09:40:00.000Z,
    },
    "where": Object {
      "cityName": "Gdansk",
      "code": "GDN",
    },
  },
  "assets": Object {
    "invoiceUrl": "https://booking.skypicker.com/api/v0.1/get_file/2968389?file_id=337020126&simple_token=b9cb406d-f797-434c-bc21-a0612b92f201",
    "ticketUrl": "https://skypicker-mailing.s3.amazonaws.com/2968/1493837026_E-ticket_passenger_8394a1c13f8dcdce559085cfbbb6cc00.pdf?v=1493837026",
  },
  "authToken": "b9cb406d-f797-434c-bc21-a0612b92f201",
  "departure": Object {
    "when": Object {
      "local": 2017-09-11T09:05:00.000Z,
      "utc": 2017-09-11T07:05:00.000Z,
    },
    "where": Object {
      "cityName": "Rzeszow",
      "code": "RZE",
    },
  },
  "id": 2968389,
  "legs": Array [
    Object {
      "airlineCode": "LO",
      "arrival": Object {
        "when": Object {
          "local": 2017-09-11T09:55:00.000Z,
          "utc": 2017-09-11T07:55:00.000Z,
        },
        "where": Object {
          "cityName": "Warsaw",
          "code": "WAW",
        },
      },
      "departure": Object {
        "when": Object {
          "local": 2017-09-11T09:05:00.000Z,
          "utc": 2017-09-11T07:05:00.000Z,
        },
        "where": Object {
          "cityName": "Rzeszow",
          "code": "RZE",
        },
      },
      "flightNo": 3806,
      "id": "SP1123103_1678073",
      "recheckRequired": false,
    },
    Object {
      "airlineCode": "LO",
      "arrival": Object {
        "when": Object {
          "local": 2017-09-11T11:40:00.000Z,
          "utc": 2017-09-11T09:40:00.000Z,
        },
        "where": Object {
          "cityName": "Gdansk",
          "code": "GDN",
        },
      },
      "departure": Object {
        "when": Object {
          "local": 2017-09-11T10:45:00.000Z,
          "utc": 2017-09-11T08:45:00.000Z,
        },
        "where": Object {
          "cityName": "Warsaw",
          "code": "WAW",
        },
      },
      "flightNo": 3835,
      "id": "SP1123103_1678074",
      "recheckRequired": false,
    },
  ],
  "price": Object {
    "amount": 1082,
    "currency": "CZK",
  },
}
`;
